src/test/ui/span/issue28498-reject-ex1.nll.stderr
error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/issue28498-reject-ex1.rs:44:29
   |
LL |     foo.data[0].1.set(Some(&foo.data[1]));
   |                             ^^^^^^^^
...
LL | }
   | -
   | |
   | here, drop of `foo` needs exclusive access to `foo.data`, because the type `Foo<Concrete<'_>>` implements the `Drop` trait
   | borrow later used here, when `foo` is dropped
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to previous error

For more information about this error, try `rustc --explain E0713`.
